--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@ footer p{color:#ebe0f5;font-weight:bold}
     }
 
     .blocka p{text-align:center}
+    
+    .blocka img.imga {
+        width: 100%; /* full width of container */
+        max-width: 250px; /* optional max width */
+        height: auto; 
+        margin-bottom: 20px;
+    }
 }
 </style>
 </head>
