--- a/index.html
+++ b/index.html
@@ -109,14 +109,20 @@ h3{
     position:absolute;
     top:50%;
     transform:translateY(-50%);
-    background:#7a52a3;
-    color:#fff;
-    border:none;
+    background: rgba(255, 255, 255, 0.3); /* semi-transparent for clarity */
+    color:#7a52a3; /* can keep your theme color for arrow */
+    border:2px solid #7a52a3; /* optional: makes buttons visible */
     padding:10px 16px;
     font-size:20px;
     cursor:pointer;
     z-index:10;
     border-radius:50%;
+    transition: background .3s, color .3s;
+}
+
+.slider-btn:hover{
+    background: rgba(255, 255, 255, 0.6); /* highlight on hover */
+    color: #fff;
 }
 
 .prev{left:50px}
@@ -210,7 +216,7 @@ footer p{color:#ebe0f5;font-weight:bold}
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
 
     <div class="navs" id="navs">
-        <a href="index.html" class="anav"><p class="navp">HOME</p></a>
+        <a href="#" class="anav" id="homeLink"><p class="navp">HOME</p></a>
         <a href="#projects" class="anav"><p class="navp">PROJECTS</p></a>
         <a href="#contact" class="anav"><p class="navp">CONTACTS</p></a>
     </div>
@@ -303,6 +309,12 @@ footer p{color:#ebe0f5;font-weight:bold}
 </footer>
 
 <script>
+    // HOME reload button
+document.getElementById("homeLink").addEventListener("click", function(e){
+    e.preventDefault();           // prevent default link behavior
+    window.location.href = window.location.pathname; // reload page fully, reset scroll
+});
+    
     /* ===== FIX NAV AFTER SCROLL ===== */
 const nav = document.getElementById("navbar");
 window.addEventListener("scroll",()=>{
