--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@ h3{
     .pro{
         padding: 50px;
     }
+    .project1,h,p,.project2, .project3{
+        padding: 18px;
+    }
     .contact{
         margin-top: 50px;
         padding-bottom:120px;
@@ -152,7 +155,7 @@ h3{
         width: 150px;
         border-radius: 20px;
         border: 0;
-        margin:20px 0;
+        margin:20px 0px;
     }
     a{
         text-decoration: none;
